# wlog

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Readme.md  index.html  wamba-ci.json
.ci/: cppcheck.sh
.ci/orig/: .gitlab-ci.yml.orig  build-and-deploy.sh.orig
.cppcheck/: suppressions.txt
.github/: build_history.txt
.github/workflows/: mambaru.yml  master.yml
cmake/: AUX.cmake  Config.cmake.in  WLOG.cmake  mambalibs.cmake  mambaopt.cmake  mambaru.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/tests/: index-sort-f.html  index-sort-l.html  index.html  test.hpp.func-sort-c.html  test.hpp.func.html  test.hpp.gcov.html  test1.cpp.func-sort-c.html  test1.cpp.func.html  test1.cpp.gcov.html  test2.cpp.func-sort-c.html  test2.cpp.func.html  test2.cpp.gcov.html  test3.cpp.func-sort-c.html  test3.cpp.func.html  test3.cpp.gcov.html  test4.cpp.func-sort-c.html  test4.cpp.func.html  test4.cpp.gcov.html  test5.cpp.func-sort-c.html  test5.cpp.func.html  test5.cpp.gcov.html
cov-report/wlog/: index-sort-f.html  index-sort-l.html  index.html  init.cpp.func-sort-c.html  init.cpp.func.html  init.cpp.gcov.html  load.cpp.func-sort-c.html  load.cpp.func.html  load.cpp.gcov.html
cov-report/wlog/aux/: aux.cpp.func-sort-c.html  aux.cpp.func.html  aux.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  strftime.cpp.func-sort-c.html  strftime.cpp.func.html  strftime.cpp.gcov.html
cov-report/wlog/formatter/: colorized_flags.hpp.func-sort-c.html  colorized_flags.hpp.func.html  colorized_flags.hpp.gcov.html  formatter.cpp.func-sort-c.html  formatter.cpp.func.html  formatter.cpp.gcov.html  formatter.hpp.func-sort-c.html  formatter.hpp.func.html  formatter.hpp.gcov.html  formatter_handlers.cpp.func-sort-c.html  formatter_handlers.cpp.func.html  formatter_handlers.cpp.gcov.html  formatter_handlers.hpp.func-sort-c.html  formatter_handlers.hpp.func.html  formatter_handlers.hpp.gcov.html  formatter_options.cpp.func-sort-c.html  formatter_options.cpp.func.html  formatter_options.cpp.gcov.html  (+9 more)
cov-report/wlogjson/: basic_logger_options_json.hpp.func-sort-c.html  basic_logger_options_json.hpp.func.html  basic_logger_options_json.hpp.gcov.html  colorized_flags_json.hpp.func-sort-c.html  colorized_flags_json.hpp.func.html  colorized_flags_json.hpp.gcov.html  custom_logger_options_json.hpp.func-sort-c.html  custom_logger_options_json.hpp.func.html  custom_logger_options_json.hpp.gcov.html  file_writer_options_json.hpp.func-sort-c.html  file_writer_options_json.hpp.func.html  file_writer_options_json.hpp.gcov.html  formatter_options_json.hpp.func-sort-c.html  formatter_options_json.hpp.func.html  formatter_options_json.hpp.gcov.html  hide_flags_json.hpp.func-sort-c.html  hide_flags_json.hpp.func.html  hide_flags_json.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  logger_options_json.hpp.func-sort-c.html  logger_options_json.hpp.func.html  logger_options_json.hpp.gcov.html  resolutions_json.hpp.func-sort-c.html  resolutions_json.hpp.func.html  resolutions_json.hpp.gcov.html  stdout_writer_options_json.hpp.func-sort-c.html  stdout_writer_options_json.hpp.func.html  stdout_writer_options_json.hpp.gcov.html  syslog_writer_options_json.hpp.func-sort-c.html  syslog_writer_options_json.hpp.func.html  syslog_writer_options_json.hpp.gcov.html
docs/html/: index.html
examples/: CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_j.cpp  example_j0.conf  example_j1.conf  example_j2.conf  hello.cpp
tests/: CMakeLists.txt  test.hpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
wlog/: aux.cpp  aux.hpp  default_logger.cpp  default_logger.hpp  file_writer.cpp  file_writer.hpp  formatter.cpp  formatter.hpp  formatter1.cpp  formatter1.hpp  formatter_options.hpp  global_log.cpp  global_log.hpp  iformatter.hpp  ilogger.hpp  init.cpp  init.hpp  init_log.cpp  init_log.hpp  iwriter.hpp  load.cpp  load.hpp  load_options.cpp  load_options.hpp  log.hpp  logger.hpp  logger_fun.hpp  logger_options.hpp  logging.hpp  logstream.cpp  logstream.hpp  options.hpp  resolutions.hpp  stdout_writer.cpp  stdout_writer.hpp  strftime.cpp  strftime.hpp  syslog_writer.cpp  syslog_writer.hpp  types.hpp  (+3 more)
wlog/aux/: aux.cpp  aux.hpp  strftime.cpp  strftime.hpp
wlog/formatter/: colorized_flags.hpp  formatter.cpp  formatter.hpp  formatter_handlers.cpp  formatter_handlers.hpp  formatter_options.cpp  formatter_options.hpp  hide_flags.hpp
wlog/global/: global_log.cpp  global_log.hpp  logstream.cpp  logstream.hpp  stdstream.cpp  stdstream.hpp
wlog/logger/: basic_logger_handlers.cpp  basic_logger_handlers.hpp  basic_logger_options.cpp  basic_logger_options.hpp  custom_logger_options.cpp  custom_logger_options.hpp  default_logger.cpp  default_logger.hpp  file_logger_options.cpp  file_logger_options.hpp  logger_handlers.cpp  logger_handlers.hpp  logger_options.cpp  logger_options.hpp  stdout_logger_options.cpp  stdout_logger_options.hpp  syslog_logger_options.cpp  syslog_logger_options.hpp
wlog/options/: basic_logger_handlers.hpp  basic_logger_options.hpp  colorized_flags.hpp  file_logger_options.hpp  formatter_handlers.hpp  formatter_options.hpp  hide_flags.hpp  logger_handlers.hpp  logger_options.hpp  resolutions.hpp  stdout_logger_options.hpp  syslog_logger_options.hpp
wlog/writer/: file_writer.cpp  file_writer.hpp  file_writer_handlers.hpp  file_writer_options.cpp  file_writer_options.hpp  stdout_writer.cpp  stdout_writer.hpp  stdout_writer_options.cpp  stdout_writer_options.hpp  syslog_writer.cpp  syslog_writer.hpp  syslog_writer_options.cpp  syslog_writer_options.hpp  writer_context.hpp
wlogjson/: basic_logger_options_json.hpp  colorized_flags_json.hpp  custom_logger_options_json.hpp  file_logger_options_json.hpp  file_writer_options_json.hpp  formatter_options_json.hpp  hide_flags_json.hpp  logger_options_json.hpp  resolutions_json.hpp  stdout_logger_options_json.hpp  stdout_writer_options_json.hpp  syslog_logger_options_json.hpp  syslog_writer_options_json.hpp
(+318 files in other folders)
